# Online-KTV

./: README.cn.md  README.en.md  README.md  README.zh.md
Agora-Online-KTV-Android/: README.md  build.gradle  gradle.properties  settings.gradle
Agora-Online-KTV-Android/KTV/: .gitignore  LeanCloudHelp.py  README.md  build.gradle  env.json  proguard-rules.pro
Agora-Online-KTV-Android/LeonidsLib/: build.gradle
Agora-Online-KTV-Android/app/: build.gradle
Agora-Online-KTV-Android/app/libs/: PLACEHOLDER
Agora-Online-KTV-Android/baselibrary/: build.gradle  consumer-rules.pro  proguard-rules.pro
Agora-Online-KTV-Android/data/: .gitignore  build.gradle  consumer-rules.pro  proguard-rules.pro
Agora-Online-KTV-Android/gradle/wrapper/: gradle-wrapper.properties
Agora-Online-KTV-Android/lrcview/: README.md  build.gradle  uml.md
Agora-Online-KTV-Android/raw_data/: CMakeLists.txt  build.gradle
Agora-Online-KTV-iOS/: .gitignore  .swiftlint.yml  Podfile  README.md
Agora-Online-KTV-iOS/Agora-Online-KTV.xcodeproj/: project.pbxproj
Agora-Online-KTV-iOS/Agora-Online-KTV/AgoraKtvKit/: AgoraAudioFrame.h  AgoraAudioFrame.mm  AudioCircularBuffer.cc  KTVKit.h  KTVKit.m
Agora-Online-KTV-iOS/AgoraLrcScoreView/: AgoraLrcScore.podspec  AgoraLrcScoreConfigModel.swift  AgoraLrcScoreView.swift  GCDTimer.swift
Agora-Online-KTV-iOS/AgoraSDK/: AgoraSdk.podspec
Agora-Online-KTV-iOS/App/: LiveKtv.h  Main.storyboard  app-Bridging-Header.h
Agora-Online-KTV-iOS/Backend/: leanCloudHelp.py
Agora-Online-KTV-iOS/Core/: Config.swift  Core.h
Agora-Online-KTV-iOS/LrcView/: Extension.swift  LocalMusicManager.swift  Logger.swift  LrcSentence.swift  LrcView.h  Lyric.swift  MiguLyric.swift  MusicLyricView.swift  Util.swift  Utils.swift
Agora-Online-KTV-iOS/OnlineKTV/: AppDelegate.swift  AppTargets.swift  Info.plist  SceneDelegate.swift
Agora-Online-KTV-iOS/OnlineKTV.xcodeproj/: project.pbxproj
Agora-Online-KTV-iOS/Res/: 001.xml  003.xml  004.xml  005.xml  send_it_en.lrc
AgoraShareVideoAudience/: .gitignore
AgoraShareVideoAudience/AgoraShareVideoAudience/: AppDelegate.h  AppDelegate.m  KeyCenter.m  LiveRoomViewController.h  LiveRoomViewController.mm  MainViewController.h  MainViewController.m  ProfileCell.h  ProfileCell.m  SettingsViewController.h  VideoViewLayouter.h  VideoViewLayouter.m
AgoraShareVideo_ijkplayer-KTV/AgoraShareVideo_ijkplayer/: AppDelegate.m  MainViewController.h  main.m
Android/Agora-Online-KTV/: settings.gradle
Backend/: Readme.md  leanCloudHelp.py
Backend/testproject/: pom.xml
Image/: description.md
android/Agora-Android-Tutorial-1to1/: README.zh.md
android/Agora-Online-KTV-Audience/: README.md  local.properties
android/AgoraPlayerDemo/app/: CMakeLists.txt  build.gradle
android/AgoraPlayerDemo/app/include/: IAgoraRtcEngine.h
android/AgoraPlayerDemo/app/src/androidTest/java/com/example/zhanxiaochao/agoraplayerdemo/: ExampleInstrumentedTest.java
android/AgoraPlayerDemo/app/src/main/: AndroidManifest.xml
android/AgoraPlayerDemo/app/src/main/cpp/: AgoraFFDecode.cpp  AgoraFFDecode.h  AgoraFFDemux.cpp  AgoraFFPlayerBuilder.cpp  AgoraLog.h  AgoraParameter.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IResample.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  apm-plugin-native-lib.cpp
android/AgoraPlayerDemo/app/src/main/java/com/example/zhanxiaochao/agoraplayerdemo/: ConstantApp.java  MainActivity.java  XPlay.java
android/AgoraPlayerDemo/app/src/main/res/layout/: activity_main.xml
android/AgoraPlayerDemo/app/src/main/res/values/: strings.xml
android/AgoraPlayerDemo/app/src/test/java/com/example/zhanxiaochao/agoraplayerdemo/: ExampleUnitTest.java
iOS/Agora-Online-KTV/: .gitignore
(+670 files in other folders)
